--- a/springboot-dockerize/Dockerfile
+++ b/springboot-dockerize/Dockerfile
@@ -1,4 +1,7 @@
-FROM openjdk:17
-EXPOSE:8181
-ADD target/dockerized-spring-boot.jar  dockerized-spring-boot
-ENTRYPOINT ["java","-jar","dockerized-spring-boot.jar"]
+FROM amazoncorretto:17.0.7-alpine
+
+EXPOSE 8181
+
+ADD target/dockerized-spring-boot.jar  dockerized-spring-boot.jar
+
+ENTRYPOINT ["java","-jar","/dockerized-spring-boot.jar"]
